# usmca_discord_bot

./:  .env.docker.example  .dockerignore  .env.example  ACTIONS_MODULE_SUMMARY.md  BEHAVIOR_MODULE_SUMMARY.md  BOT_MODULE_SUMMARY.md  DATABASE_TESTS_SUMMARY.md  DOCKER_DEPLOYMENT.md  DOCKER_SUMMARY.md  Dockerfile  LICENSE  PROJECT_STATUS.md  README.md  TEST_COVERAGE_SUMMARY.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.dev.txt  requirements.txt
sql/: schema.sql
src/usmca_bot/: __init__.py  bot.py  cli.py  config.py
src/usmca_bot/actions/: __init__.py  decision.py  executor.py
src/usmca_bot/behavior/: __init__.py  analyzer.py  brigade.py
src/usmca_bot/classification/: __init__.py  engine.py  toxicity.py
src/usmca_bot/commands/: __init__.py  base.py  config_commands.py  handler.py  system_commands.py  user_commands.py
src/usmca_bot/database/: __init__.py  models.py  postgres.py  redis.py
tests/: __init__.py  conftest.py  test_config.py
tests/test_actions/: __init__.py  test_decision.py
tests/test_behavior/: __init__.py  test_analyzer.py  test_brigade.py
tests/test_bot/: __init__.py  test_bot.py  test_cli.py
tests/test_classification/: test_engine.py  test_toxicity.py
tests/test_commands/: test_commands.py
tests/test_database/: test_models.py  test_postgres.py  test_redis.py
